# yukon-solitaire

./: .gitignore  CMakeLists.txt
code/: Actions.c  Actions.h  Card.c  Card.h  Cli.c  Cli.h  DoublyLinkedList.c  DoublyLinkedList.h  Foundation.c  Foundation.h  Game.c  Game.h  History.c  History.h  LinkedList.c  LinkedList.h  Stack.c  Stack.h  Tests.c  Tests.h  View.c  View.h
decks/: d.txt  interleaved_deck.txt
docs/: REPORT.md  REQUIREMENTS.md
given-info/: Table of Contents.html
save_state/: stateful_deck.txt
